--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ ipython==8.18.1
 jedi==0.19.2
 jinja2==3.1.4
 joblib==1.4.2
-jpeg==9e
+jpeg
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
