--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 abseil-cpp==20210324.2
 absl-py==2.1.0
 aiohappyeyeballs==2.4.3
@@ -63,7 +62,7 @@ ipython==8.18.1
 jedi==0.19.2
 jinja2==3.1.4
 joblib==1.4.2
-jpeg
+jpeg== 
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
