--- a/requirements.txt
+++ b/requirements.txt
@@ -1,210 +1,139 @@
-conda-forge
-defaults
-_tflow_select==2.1.0==gpu
-abseil-cpp==20210324.2==hd77b12b_0
-absl-py==2.1.0==py39haa95532_0
-aiohappyeyeballs==2.4.3==py39haa95532_0
-aiohttp==3.10.5==py39h827c3e9_0
-aiosignal==1.2.0==pyhd3eb1b0_0
-astor==0.8.1==py39haa95532_0
-asttokens==3.0.0==pyhd8ed1ab_1
-astunparse==1.6.3==py_0
-async-timeout==4.0.3==py39haa95532_0
-attrs==24.2.0==py39haa95532_0
-blas==1.0==mkl
-blinker==1.6.2==py39haa95532_0
-bottleneck==1.4.2==py39hc99e966_0
-brotli==1.0.9==h2bbff1b_8
-brotli-bin==1.0.9==h2bbff1b_8
-brotli-python==1.0.9==py39hd77b12b_8
-bzip2==1.0.8==h2bbff1b_6
-ca-certificates==2024.11.26==haa95532_0
-cachetools==5.3.3==py39haa95532_0
-certifi==2024.8.30==py39haa95532_0
-cffi==1.17.1==py39h827c3e9_0
-charset-normalizer==3.3.2==pyhd3eb1b0_0
-click==8.1.7==py39haa95532_0
-colorama==0.4.6==py39haa95532_0
-comm==0.2.2==pyhd8ed1ab_1
-contourpy==1.2.0==py39h59b6b97_0
-cryptography==41.0.3==py39h3438e0d_0
-cudatoolkit==11.3.1==h59b6b97_2
-cudnn==8.2.1==cuda11.3_0
-cycler==0.11.0==pyhd3eb1b0_0
-debugpy==1.8.9==py39ha51f57c_0
-decorator==5.1.1==pyhd8ed1ab_1
-exceptiongroup==1.2.2==pyhd8ed1ab_1
-executing==2.1.0==pyhd8ed1ab_1
-flatbuffers==2.0.0==h6c2663c_0
-fonttools==4.51.0==py39h2bbff1b_0
-freetype==2.12.1==ha860e81_0
-frozenlist==1.5.0==py39h827c3e9_0
-gast==0.4.0==pyhd3eb1b0_0
-giflib==5.2.2==h7edc060_0
-glib==2.78.4==hd77b12b_0
-glib-tools==2.78.4==hd77b12b_0
-google-auth==2.29.0==py39haa95532_0
-google-auth-oauthlib==0.4.1==py_2
-google-pasta==0.2.0==pyhd3eb1b0_0
-grpcio==1.42.0==py39hc60d5dd_0
-gst-plugins-base==1.18.5==h9e645db_0
-gstreamer==1.18.5==hd78058f_0
-h5py==3.12.1==py39h3b2c811_0
-hdf5==1.12.1==h51c971a_3
-icc_rt==2022.1.0==h6049295_2
-icu==68.2==h0e60522_0
-idna==3.7==py39haa95532_0
-importlib-metadata==8.5.0==py39haa95532_0
-importlib_resources==6.4.0==py39haa95532_0
-intel-openmp==2023.1.0==h59b6b97_46320
-ipykernel==6.29.5==pyh4bbf305_0
-ipython==8.18.1==pyh7428d3b_3
-jedi==0.19.2==pyhd8ed1ab_1
-joblib==1.4.2==py39haa95532_0
-jpeg==9e==h827c3e9_3
-jupyter_client==8.6.3==pyhd8ed1ab_1
-jupyter_core==5.7.2==py39hcbf5309_0
-keras==2.6.0==pyhd3eb1b0_0
-keras-preprocessing==1.1.2==pyhd3eb1b0_0
-kiwisolver==1.4.4==py39hd77b12b_0
-krb5==1.19.4==h5b6d351_0
-lcms2==2.12==h83e58a3_0
-lerc==3.0==hd77b12b_0
-libbrotlicommon==1.0.9==h2bbff1b_8
-libbrotlidec==1.0.9==h2bbff1b_8
-libbrotlienc==1.0.9==h2bbff1b_8
-libclang==13.0.1==default_h66ee7f4_6
-libcurl==8.9.1==h0416ee5_0
-libdeflate==1.17==h2bbff1b_1
-libffi==3.4.4==hd77b12b_1
-libglib==2.78.4==ha17d25a_0
-libiconv==1.16==h2bbff1b_3
-libogg==1.3.5==h2bbff1b_1
-libpng==1.6.39==h8cc25b3_0
-libprotobuf==3.17.2==h23ce68f_1
-libsodium==1.0.18==h62dcd97_0
-libssh2==1.10.0==hcd4344a_2
-libtiff==4.5.1==hd77b12b_0
-libvorbis==1.3.7==he774522_0
-libwebp-base==1.3.2==h3d04722_1
-libzlib==1.2.13==h2466b09_6
-lz4-c==1.9.4==h2bbff1b_1
-markdown==3.4.1==py39haa95532_0
-markupsafe==2.1.3==py39h2bbff1b_0
-matplotlib==3.7.1==py39haa95532_1
-matplotlib-base==3.7.1==py39hf11a4ad_1
-matplotlib-inline==0.1.7==pyhd8ed1ab_1
-mkl==2023.1.0==h6b88ed4_46358
-mkl-service==2.4.0==py39h2bbff1b_1
-mkl_fft==1.3.11==py39h827c3e9_0
-mkl_random==1.2.8==py39hc64d2fc_0
-multidict==6.1.0==py39h827c3e9_0
-nest-asyncio==1.6.0==pyhd8ed1ab_1
-numexpr==2.8.4==py39h7b80656_1
-numpy==1.23.5==py39h6917f2d_1
-numpy-base==1.23.5==py39h46c4fa8_1
-oauthlib==3.2.2==py39haa95532_0
-openjpeg==2.5.2==hae555c5_0
-openssl==1.1.1w==h2bbff1b_0
-opt_einsum==3.3.0==pyhd3eb1b0_1
-packaging==24.2==pyhd8ed1ab_2
-pandas==1.5.3==py39hf11a4ad_0
-parso==0.8.4==pyhd8ed1ab_1
-pcre2==10.42==h0ff8eda_1
-pickleshare==0.7.5==pyhd8ed1ab_1004
-pillow==11.0.0==py39hb5480e2_0
-pip==24.2==py39haa95532_0
-platformdirs==4.3.6==pyhd8ed1ab_1
-ply==3.11==py39haa95532_0
-pooch==1.8.2==py39haa95532_0
-prompt-toolkit==3.0.48==pyha770c72_1
-propcache==0.2.0==py39h827c3e9_0
-psutil==6.1.0==py39ha55e580_0
-pure_eval==0.2.3==pyhd8ed1ab_1
-pyasn1==0.4.8==pyhd3eb1b0_0
-pyasn1-modules==0.2.8==py_0
-pybind11-abi==5==hd3eb1b0_0
-pycparser==2.21==pyhd3eb1b0_0
-pygments==2.18.0==pyhd8ed1ab_1
-pyjwt==2.9.0==py39haa95532_0
-pyopenssl==23.2.0==py39haa95532_0
-pyparsing==3.2.0==py39haa95532_0
-pyqt==5.15.10==py39hd77b12b_0
-pyqt5-sip==12.13.0==py39h2bbff1b_0
-pysocks==1.7.1==py39haa95532_0
-python==3.9.18==h6244533_0
-python-dateutil==2.9.0.post0==pyhff2d567_1
-python-flatbuffers==1.12==pyhd3eb1b0_0
-python-tzdata==2023.3==pyhd3eb1b0_0
-python_abi==3.9==2_cp39
-pytz==2024.1==py39haa95532_0
-pywin32==307==py39ha51f57c_3
-pyzmq==25.1.2==py39hd77b12b_0
-qt-main==5.15.2==he906bfe_0
-requests==2.32.3==py39haa95532_1
-requests-oauthlib==2.0.0==py39haa95532_0
-rsa==4.7.2==pyhd3eb1b0_1
-scikit-learn==1.5.1==py39hc64d2fc_0
-scipy==1.10.1==py39hdcfc7df_1
-seaborn==0.13.2==py39haa95532_0
-setuptools==75.1.0==py39haa95532_0
-sip==6.7.12==py39hd77b12b_0
-six==1.16.0==pyhd3eb1b0_1
-snappy==1.2.1==hcdb6601_0
-sqlite==3.45.3==h2bbff1b_0
-stack_data==0.6.3==pyhd8ed1ab_1
-tbb==2021.8.0==h59b6b97_0
-tensorboard==2.6.0==py_1
-tensorboard-data-server==0.6.1==py39haa95532_0
-tensorboard-plugin-wit==1.8.1==py39haa95532_0
-tensorflow==2.6.0==gpu_py39he88c5ba_0
-tensorflow-base==2.6.0==gpu_py39hb3da07e_0
-tensorflow-estimator==2.6.0==pyh7b7c402_0
-tensorflow-gpu==2.6.0==h17022bd_0
-termcolor==2.1.0==py39haa95532_0
-threadpoolctl==3.5.0==py39h9909e9c_0
-tomli==2.0.1==py39haa95532_0
-tornado==6.4.2==py39ha55e580_0
-traitlets==5.14.3==pyhd8ed1ab_1
-typing-extensions==4.11.0==py39haa95532_0
-typing_extensions==4.11.0==py39haa95532_0
-tzdata==2024b==h04d1e81_0
-ucrt==10.0.22621.0==h57928b3_1
-unicodedata2==15.1.0==py39h2bbff1b_0
-urllib3==2.2.3==py39haa95532_0
-vc==14.40==haa95532_2
-vc14_runtime==14.42.34433==he29a5d6_23
-vs2015_runtime==14.42.34433==hdffcdeb_23
-wcwidth==0.2.13==pyhd8ed1ab_1
-werkzeug==3.0.6==py39haa95532_0
-wheel==0.35.1==pyhd3eb1b0_0
-win_inet_pton==1.1.0==py39haa95532_0
-wrapt==1.14.1==py39h2bbff1b_0
-xz==5.4.6==h8cc25b3_1
-yarl==1.18.0==py39h827c3e9_0
-zeromq==4.3.5==hd77b12b_0
-zipp==3.21.0==py39haa95532_0
-zlib==1.2.13==h2466b09_6
-zstd==1.5.6==h8880b57_0
-pip:
-altair====5.5.0
-gitdb====4.0.11
-gitpython====3.1.43
-jinja2====3.1.4
-jsonschema====4.23.0
-jsonschema-specifications====2024.10.1
-markdown-it-py====3.0.0
-mdurl====0.1.2
-narwhals====1.16.0
-opencv-python====4.10.0.84
-protobuf====3.20.3
-pyarrow====18.1.0
-pydeck====0.9.1
-referencing====0.35.1
-rich====13.9.4
-rpds-py====0.22.3
-smmap====5.0.1
-streamlit====1.40.2
-tenacity====9.0.0
-toml====0.10.2
-watchdog====6.0.0
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.5
+aiosignal==1.2.0
+altair==5.5.0
+astor==0.8.1
+asttokens==3.0.0
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==24.2.0
+blinker==1.6.2
+Bottleneck==1.4.2
+Brotli==1.0.9
+cachetools==5.3.3
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cryptography==41.0.3
+cycler==0.11.0
+debugpy==1.8.9
+decorator==5.1.1
+exceptiongroup==1.2.2
+executing==2.1.0
+flatbuffers==20210226132247
+fonttools==4.51.0
+frozenlist==1.5.0
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.29.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.42.0
+h5py==3.12.1
+idna==3.7
+importlib_metadata==8.5.0
+importlib_resources==6.4.0
+ipykernel==6.29.5
+ipython==8.18.1
+jedi==0.19.2
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+Markdown==3.4.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mkl_fft==1.3.11
+mkl_random==1.2.8
+mkl-service==2.4.0
+multidict==6.1.0
+narwhals==1.16.0
+nest_asyncio==1.6.0
+numexpr==2.8.4
+numpy==1.23.5
+oauthlib==3.2.2
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+packaging==24.2
+pandas==1.5.3
+parso==0.8.4
+pickleshare==0.7.5
+pillow==11.0.0
+pip==24.2
+platformdirs==4.3.6
+ply==3.11
+pooch==1.8.2
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==3.20.3
+psutil==6.1.0
+pure_eval==0.2.3
+pyarrow==18.1.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pyOpenSSL==23.2.0
+pyparsing==3.2.0
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pywin32==307
+pyzmq==25.1.2
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.7.2
+scikit-learn==1.5.1
+scipy==1.10.1
+seaborn==0.13.2
+setuptools==75.1.0
+sip==6.7.12
+six==1.16.0
+smmap==5.0.1
+stack_data==0.6.3
+streamlit==1.40.2
+tenacity==9.0.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+termcolor==2.1.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tomli==2.0.1
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.11.0
+tzdata==2023.3
+unicodedata2==15.1.0
+urllib3==2.2.3
+watchdog==6.0.0
+wcwidth==0.2.13
+Werkzeug==3.0.6
+wheel==0.35.1
+win-inet-pton==1.1.0
+wrapt==1.14.1
+yarl==1.18.0
+zipp==3.21.0
