--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ debugpy==1.8.9
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
-flatbuffers==20210226132247
+flatbuffers==2.0.0
 fonttools==4.51.0
 frozenlist==1.5.0
 gast==0.4.0
