--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ astunparse==1.6.3
 async-timeout==4.0.3
 attrs==24.2.0
 blinker==1.6.2
-Bottleneck==1.4.2
 Brotli==1.0.9
 cachetools==5.3.3
 certifi==2024.8.30
@@ -48,15 +47,12 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==2.6.0
-Keras-Preprocessing==1.1.2
+Keras-Preprocessing
 kiwisolver==1.4.4
 Markdown==3.4.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.7
 mdurl==0.1.2
-mkl_random==1.2.8
 mkl-service==2.4.0
 multidict==6.1.0
 narwhals==1.16.0
