--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,117 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.5
+aiosignal==1.2.0
 altair==5.5.0
+astor==0.8.1
+asttokens==3.0.0
+astunparse==1.6.3
+async-timeout==4.0.3
 attrs==24.2.0
 blinker==1.6.2
-cachetools==4.0.0
+Bottleneck==1.4.2
+Brotli==1.0.9
+cachetools==5.3.3
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
 cryptography==41.0.3
 cycler==0.11.0
 debugpy==1.8.9
 decorator==5.1.1
-flatbuffers==2.0.0
+exceptiongroup==1.2.2
+executing==2.1.0
+flatbuffers==20210226132247
+fonttools==4.51.0
+frozenlist==1.5.0
 gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.29.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
 grpcio==1.42.0
 h5py==3.12.1
 idna==3.7
+importlib_metadata==8.5.0
+importlib_resources==6.4.0
 ipykernel==6.29.5
 ipython==8.18.1
+jedi==0.19.2
+Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==2.6.0
-Keras-Preprocessing
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 Markdown==3.4.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mkl_fft==1.3.11
+mkl_random==1.2.8
 mkl-service==2.4.0
+multidict==6.1.0
+narwhals==1.16.0
+nest_asyncio==1.6.0
 numexpr==2.8.4
 numpy==1.23.5
+oauthlib==3.2.2
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
 packaging==24.2
 pandas==1.5.3
+parso==0.8.4
+pickleshare==0.7.5
+pillow==11.0.0
+pip==24.2
+platformdirs==4.3.6
+ply==3.11
+pooch==1.8.2
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==3.20.3
+psutil==6.1.0
+pure_eval==0.2.3
 pyarrow==18.1.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
-PyQt5==5.15.10
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pyOpenSSL==23.2.0
 pyparsing==3.2.0
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32==307
+pyzmq==25.1.2
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.7.2
 scikit-learn==1.5.1
 scipy==1.10.1
 seaborn==0.13.2
+setuptools==75.1.0
+sip==6.7.12
+six==1.16.0
+smmap==5.0.1
+stack_data==0.6.3
 streamlit==1.40.2
 tenacity==9.0.0
 tensorboard==2.6.0
@@ -50,10 +121,19 @@ tensorflow==2.6.0
 tensorflow-estimator==2.6.0
 termcolor==2.1.0
 threadpoolctl==3.5.0
+toml==0.10.2
+tomli==2.0.1
 tornado==6.4.2
+traitlets==5.14.3
 typing_extensions==4.11.0
 tzdata==2023.3
+unicodedata2==15.1.0
 urllib3==2.2.3
 watchdog==6.0.0
+wcwidth==0.2.13
 Werkzeug==3.0.6
 wheel==0.35.1
+win-inet-pton==1.1.0
+wrapt==1.14.1
+yarl==1.18.0
+zipp==3.21.0
